# netops_utils

./: .gitignore  .jscpd.json  .yamllint.yml  README.md  pyproject.toml  sonar-project.properties  tasks.py
.devcontainer/: devcontainer.json
.github/: dependabot.yaml
.github/workflows/: megalinter.yaml  sonar.yaml
src/: main.py  path_check.py  ping_check.py  tcp_check.py  utils.py
tests/: services.csv
